Project 'Master-workers' for theme Concurrent.